--- a/frontreact/src/dashboard/navbar/Navbar.css
+++ b/frontreact/src/dashboard/navbar/Navbar.css
@@ -58,4 +58,21 @@
       font-size: 16px;
     }
   }
+
+  .admin-image {
+    width: 60%; /* Ajuste la taille si nécessaire */
+    display: block;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .error-message {
+    color: red;
+    font-size: 14px;
+    text-align: center;
+    margin-top: 10px;
+  }
+  
   
