--- a/frontreact/src/dashboard/css/Style.css
+++ b/frontreact/src/dashboard/css/Style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Orbitron', sans-serif; /* Futuriste et net */
-  background-image: url("background-image.png");
+  background-image: url("Serre_futuriste_W.webp");
   background-repeat: no-repeat;
   background-size: cover; /* Très important : l'image couvre toute la zone */
   background-position: center center; /* Centre l'image */
