purge + modif rfid en conséquence

--- a/frontreact/src/adminGest/BasePurge.css
+++ b/frontreact/src/adminGest/BasePurge.css
@@ -65,3 +65,12 @@
     color: red;
   }
   
+  .password-input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 6px;
+    font-size: 16px;
+  }
+  
